# otus_smart_home_backend

./: Cargo.toml  README.md
.github/workflows/: build.yml
examples/: net_socket_emulator.rs  run_repo.rs
src/: lib.rs  main.rs
src/api/: device.rs  device_query.rs  mod.rs  room.rs
src/cli/: mod.rs
src/domain/: client.rs  entity.rs  mod.rs
src/domain/service/: device.rs  device_query.rs  mod.rs  query_device.rs  room.rs
src/repository/: room.rs
