[package]
name = "smart_home_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
chrono = "0.4.*"
clap = "2.33.3"
dialoguer = "0.8.0"

[dev-dependencies]
# test only deps
float-cmp = "*"