[package]
name = "smart_home_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
chrono = "0.4.*"
clap = "2.33.3"
env_logger = "0.9"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


[dev-dependencies]
# test only deps
float-cmp = "*"